# asusXtion

./: README.md
XtionImage/: CMakeLists.txt  README.md  main.cpp
debian/: README.md  openni2_2.2.0-1jderobot_armhf.deb
